--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -11,6 +11,7 @@ nav:
         - instalar/instalacion.md
     - "Lectura":
         - leer/leer-cfdi.md
+        - leer/leer-cfdi-retenciones.md
         - leer/quickreader.md
         - leer/limpieza-cfdi.md
     - "Validación":
