Add support for new genkgo/xsl
Use master-dev since version 1.0.0 contains unfixed issues

--- a/composer.json
+++ b/composer.json
@@ -42,7 +42,7 @@
         "genkgo/xsl": "Allows usage of Genkgo/Xsl transformations"
     },
     "require-dev": {
-        "genkgo/xsl": "^0.6",
+        "genkgo/xsl": "dev-master",
         "phpunit/phpunit": "^8.5",
         "squizlabs/php_codesniffer": "^3.0",
         "friendsofphp/php-cs-fixer": "^2.4",
