--- a/composer.json
+++ b/composer.json
@@ -44,6 +44,7 @@
     "require-dev": {
         "genkgo/xsl": "dev-master",
         "phpunit/phpunit": "^8.5",
+        "dms/phpunit-arraysubset-asserts": "^0.1.1",
         "squizlabs/php_codesniffer": "^3.0",
         "friendsofphp/php-cs-fixer": "^2.4",
         "phpstan/phpstan": "^0.11"
