--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ language: php
 dist: xenial
 
 # php compatibility
-php: ["7.2", "7.3", "7.4", "8.0"]
+php: ["7.3", "7.4", "8.0"]
 
 branches:
     except:
