--- a/.editorconfig
+++ b/.editorconfig
@@ -6,6 +6,9 @@ indent_style = space
 indent_size = 4
 end_of_line = lf
 
+[**.{yml,yml.dist,neon,neon.dist}]
+indent_size = 2
+
 [**.{php,md,xml,yml,json,dist}]
 charset = utf-8
 trim_trailing_whitespace = true
