--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,5 +1,7 @@
 site_name: "CfdiUtils"
 site_description: "Librería de utilerías comunes para trabajar con PHP y CFDI 3.2 & 3.3 (México)"
+site_dir: build/docs
+strict: true
 
 theme:
   name: "readthedocs"
