--- a/.github/workflows/full-build.yml
+++ b/.github/workflows/full-build.yml
@@ -18,7 +18,7 @@ jobs:
         uses: shivammathur/setup-php@v2
         with:
           php-version: "8.0"
-          extensions: libxml, dom, xsl, simplexml, mbstring, openssl, soap, iconv, json
+          extensions: libxml, dom, xsl, simplexml, mbstring, openssl, soap, iconv, json, intl, fileinfo
           coverage: none
           tools: composer:v2, cs2pr
         env:
