--- a/.github/workflows/full-build.yml
+++ b/.github/workflows/full-build.yml
@@ -19,7 +19,7 @@ jobs:
         with:
           php-version: "8.0"
           extensions: libxml, dom, xsl, simplexml, mbstring, openssl, soap, iconv, json, intl, fileinfo
-          coverage: none
+          coverage: xdebug
           tools: composer:v2, cs2pr
         env:
           fail-fast: true
