--- a/.gitattributes
+++ b/.gitattributes
@@ -13,14 +13,13 @@
 
 # Do not put this files on a distribution package
 /tests/              export-ignore
-/.appveyor.yml       export-ignore
+/.github/            export-ignore
 /.editorconfig       export-ignore
 /.gitattributes      export-ignore
 /.gitignore          export-ignore
 /.markdownlint.json  export-ignore
 /.php_cs.dist        export-ignore
 /.scrutinizer.yml    export-ignore
-/.travis.yml         export-ignore
 /mkdocs.yml          export-ignore
 /package.json        export-ignore
 /phpcs.xml.dist      export-ignore
