--- a/composer.json
+++ b/composer.json
@@ -42,6 +42,7 @@
         "genkgo/xsl": "Allows usage of Genkgo/Xsl transformations"
     },
     "require-dev": {
+        "phpcfdi/cfdi-cleaner": "^1.0",
         "genkgo/xsl": "dev-master",
         "phpunit/phpunit": "^9.5",
         "squizlabs/php_codesniffer": "^3.6",
