--- a/.gitattributes
+++ b/.gitattributes
@@ -6,23 +6,23 @@
 *.bin binary
 
 # Do not put this files on a distribution package (by .gitignore)
-/vendor              export-ignore
-/composer.lock       export-ignore
-/node_modules        export-ignore
-/package-lock.json   export-ignore
+/vendor                     export-ignore
+/composer.lock              export-ignore
+/node_modules               export-ignore
+/package-lock.json          export-ignore
 
 # Do not put this files on a distribution package
-/tests/              export-ignore
-/.github/            export-ignore
-/.editorconfig       export-ignore
-/.gitattributes      export-ignore
-/.gitignore          export-ignore
-/.markdownlint.json  export-ignore
-/.php_cs.dist        export-ignore
-/.scrutinizer.yml    export-ignore
-/mkdocs.yml          export-ignore
-/package.json        export-ignore
-/phpcs.xml.dist      export-ignore
-/phpstan.neon.dist   export-ignore
-/phpunit.xml.dist    export-ignore
+/tests/                     export-ignore
+/.github/                   export-ignore
+/.editorconfig              export-ignore
+/.gitattributes             export-ignore
+/.gitignore                 export-ignore
+/.markdownlint.json         export-ignore
+/.php-cs-fixer.dist.php     export-ignore
+/.scrutinizer.yml           export-ignore
+/mkdocs.yml                 export-ignore
+/package.json               export-ignore
+/phpcs.xml.dist             export-ignore
+/phpstan.neon.dist          export-ignore
+/phpunit.xml.dist           export-ignore
 
