Update to standard template used on phpCfdi

--- a/.scrutinizer.yml
+++ b/.scrutinizer.yml
@@ -3,18 +3,19 @@ filter:
     - 'tests/'
     - 'vendor/'
 
-tools:
-  external_code_coverage:
-    timeout: 600 # default is 300 seconds
-
 build:
   dependencies:
     override:
-      - composer self-update --no-interaction --no-progress
       - composer remove squizlabs/php_codesniffer friendsofphp/php-cs-fixer phpstan/phpstan --dev --no-interaction --no-progress --no-update
-      - composer install --no-interaction
+      - composer upgrade --no-interaction --prefer-dist
   nodes:
     analysis:
+      project_setup:
+        override: true
       tests:
         override:
           - php-scrutinizer-run --enable-security-analysis
+
+tools:
+  external_code_coverage:
+    timeout: 600 # default is 300 seconds
