Add internal development tool elements-maker.php

--- a/composer.json
+++ b/composer.json
@@ -55,6 +55,7 @@
     },
     "autoload-dev": {
         "psr-4": {
+            "CfdiUtils\\Development\\": "development/",
             "CfdiUtilsTests\\": "tests/CfdiUtilsTests/"
         }
     },
