--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -22,8 +22,11 @@ nav:
   - "Validación":
     - validar/validacion-cfdi.md
     - validar/validaciones-estandar.md
+    - validar/validacion-cfdi-40.md
+    - validar/validaciones-40.md
   - "Creación":
     - crear/crear-cfdi.md
+    - crear/crear-cfdi-40.md
     - crear/elements-cfdi33.md
     - crear/complemento-nomina12b.md
     - crear/complementos-aun-no-implementados.md
