--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,7 @@
 
 /nbproject/private/
 /nbproject/project.properties
+nbproject/project.xml
+include.path=${php.global.include.path}
+/nbproject/
+/nbproject/project.xml
