Fix nodes pagos20/pago20

--- a/package.json
+++ b/package.json
@@ -1,5 +1,8 @@
 {
     "devDependencies": {
         "markdownlint-cli": "^0.31.1"
+    },
+    "dependencies": {
+        "mdlint": "^0.1.0"
     }
 }
