--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -25,15 +25,11 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
 
-      - name: Install libsaxonb-java on nektos/act
-        if: matrix.operating-systems == 'ubuntu-latest' && github.actor == 'nektos/act'
-        run: |
-          sudo apt-get update -y -qq
-          sudo apt-get install -y -qq default-jre
-
       - name: Install libsaxonb-java on linux
         if: matrix.operating-systems == 'ubuntu-latest'
-        run: sudo apt-get install -y -qq libsaxonb-java
+        run: |
+          sudo apt-get update -y -qq
+          sudo apt-get install -y -qq default-jre libsaxonb-java
 
       - name: Install saxonhe on windows
         if: matrix.operating-systems == 'windows-latest'
@@ -103,14 +99,11 @@ jobs:
         env:
           fail-fast: true
 
-      - name: Install libsaxonb-java on nektos/act
-        if: matrix.operating-systems == 'ubuntu-latest' && github.actor == 'nektos/act'
+      - name: Install libsaxonb-java on linux
+        if: matrix.operating-systems == 'ubuntu-latest'
         run: |
           sudo apt-get update -y -qq
-          sudo apt-get install -y -qq default-jre
-
-      - name: Install libsaxonb-java
-        run: sudo apt-get install -y -qq libsaxonb-java
+          sudo apt-get install -y -qq default-jre libsaxonb-java
 
       - name: Get composer cache directory
         id: composer-cache
