--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -112,6 +112,8 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
+        with:
+          fetch-depth: 0 # required for scrutinizer
       - name: Install libsaxonb-java on linux
         run: |
           sudo apt-get update -y -qq
