--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -84,6 +84,7 @@ jobs:
         uses: shivammathur/setup-php@v2
         with:
           php-version: '8.1'
+          extensions: soap, intl, xsl, fileinfo
           coverage: none
           tools: composer:v2, phpstan
         env:
@@ -124,6 +125,7 @@ jobs:
         uses: shivammathur/setup-php@v2
         with:
           php-version: ${{ matrix.php-versions }}
+          extensions: soap, intl, xsl, fileinfo
           coverage: xdebug
           tools: composer:v2
         env:
