--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -85,7 +85,7 @@ jobs:
         uses: shivammathur/setup-php@v2
         with:
           php-version: '8.2'
-          extensions: soap, intl, xsl, fileinfo
+          extensions: soap, intl, xsl, fileinfo, bcmath
           coverage: none
           tools: composer:v2, phpstan
         env:
@@ -128,7 +128,7 @@ jobs:
         uses: shivammathur/setup-php@v2
         with:
           php-version: ${{ matrix.php-versions }}
-          extensions: soap, intl, xsl, fileinfo
+          extensions: soap, intl, xsl, fileinfo, bcmath
           coverage: xdebug
           tools: composer:v2
         env:
@@ -175,7 +175,7 @@ jobs:
         uses: shivammathur/setup-php@v2
         with:
           php-version: ${{ matrix.php-versions }}
-          extensions: soap, intl, xsl, fileinfo
+          extensions: soap, intl, xsl, fileinfo, bcmath
           coverage: none
           tools: composer:v2
         env:
