Remove assets folder from GitHub code language detection

--- a/.gitattributes
+++ b/.gitattributes
@@ -27,3 +27,6 @@
 /phpcs.xml.dist             export-ignore
 /phpstan.neon.dist          export-ignore
 /phpunit.xml.dist           export-ignore
+
+# Do not count these files on github code language
+/tests/assets/**            linguist-detectable=false
