--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -25,9 +25,9 @@ nav:
     - validar/validacion-cfdi-40.md
     - validar/validaciones-40.md
   - "Creación":
-    - crear/crear-cfdi.md
+    - crear/crear-cfdi-33.md
     - crear/crear-cfdi-40.md
-    - crear/elements-cfdi33.md
+    - crear/elements-cfdi-40.md
     - crear/complemento-nomina12b.md
     - crear/complementos-aun-no-implementados.md
     - crear/cfdi-de-retenciones-e-informacion-de-pagos.md
