Fix CCP 3.0 Documentation
- Add document to nav section on mkdocs.yml
- Add document to index
- Move crear/assets to /_assets
- Fix markdownlint findings

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -29,6 +29,7 @@ nav:
     - crear/crear-cfdi-40.md
     - crear/elements-cfdi-40.md
     - crear/complemento-nomina12b.md
+    - crear/complemento-carta-porte-30.md
     - crear/complementos-aun-no-implementados.md
     - crear/cfdi-de-retenciones-e-informacion-de-pagos.md
   - "Componentes":
