--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -5,11 +5,15 @@
 # Required
 version: 2
 
+build:
+    os: ubuntu-22.04
+    tools:
+        python: "3.7"
+
 mkdocs:
   configuration: mkdocs.yml
 
 # Optionally set the version of Python and requirements required to build your docs
 python:
-   version: '3.7'
    install:
-   - requirements: docs/rtd-requirements.txt
+     - requirements: docs/rtd-requirements.txt
