--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,5 +1,5 @@
 site_name: "CfdiUtils"
-site_description: "Librería de utilerías comunes para trabajar con PHP y CFDI 3.2 & 3.3 (México)"
+site_description: "Librería de utilerías comunes para trabajar con PHP y CFDI 3.2, 3.3 y 4.0 (México)"
 site_dir: build/docs
 strict: true
 site_url: ''
