Add PHP 8.3 to test matrix
Unable to install using genkgo/xsl on PHP 8.3

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -111,7 +111,7 @@ jobs:
     runs-on: "ubuntu-latest"
     strategy:
       matrix:
-        php-versions: [ '7.3', '7.4', '8.0', '8.1', '8.2' ]
+        php-versions: [ '7.3', '7.4', '8.0', '8.1', '8.2', '8.3' ]
     steps:
       - name: Checkout
         uses: actions/checkout@v3
@@ -148,6 +148,10 @@ jobs:
           git clone --depth 1 https://github.com/phpcfdi/resources-sat-xml resources-sat-xml-cloned
           mv resources-sat-xml-cloned/resources build/resources
           rm -r -f resources-sat-xml-cloned
+      - name: Remove genkgo/xsl on PHP 8.3
+        if: matrix.php-versions == '8.3'
+        run: |
+          composer remove genkgo/xsl --dev --no-interaction --no-progress --no-update
       - name: Install project dependencies
         run: |
           composer remove squizlabs/php_codesniffer friendsofphp/php-cs-fixer phpstan/phpstan --dev --no-interaction --no-progress --no-update
@@ -165,7 +169,7 @@ jobs:
     runs-on: "windows-latest"
     strategy:
       matrix:
-        php-versions: [ '7.3', '7.4', '8.0', '8.1', '8.2' ]
+        php-versions: [ '7.3', '7.4', '8.0', '8.1', '8.2', '8.3' ]
     steps:
       - name: Checkout
         uses: actions/checkout@v3
@@ -196,6 +200,10 @@ jobs:
           git clone --depth 1 https://github.com/phpcfdi/resources-sat-xml resources-sat-xml-cloned
           mv resources-sat-xml-cloned/resources build/resources
           rm -r -f resources-sat-xml-cloned
+      - name: Remove genkgo/xsl on PHP 8.3
+        if: matrix.php-versions == '8.3'
+        run: |
+          composer remove genkgo/xsl --dev --no-interaction --no-progress --no-update
       - name: Install project dependencies
         run: |
           composer remove squizlabs/php_codesniffer friendsofphp/php-cs-fixer phpstan/phpstan --dev --no-interaction --no-progress --no-update
