--- a/composer.json
+++ b/composer.json
@@ -33,7 +33,7 @@
         "ext-openssl": "*",
         "ext-iconv": "*",
         "ext-json": "*",
-        "symfony/process": "^3.4|^4.2|^5.0|^6.0",
+        "symfony/process": "^3.4|^4.2|^5.0|^6.0|^7.0",
         "eclipxe/xmlresourceretriever": "^1.3.0",
         "eclipxe/xmlschemavalidator": "^3.0.2"
     },
