Refactor testing certificate downloader helper to use curl
It was failing using XmlResourceRetriever\Downloader\PhpDownloader on PHP 7.3

--- a/composer.json
+++ b/composer.json
@@ -44,6 +44,7 @@
     },
     "require-dev": {
         "ext-bcmath": "*",
+        "ext-curl": "*",
         "ext-soap": "*",
         "genkgo/xsl": "^1.0.8",
         "phpunit/phpunit": "^9.5",
