Add CPP 3.1 to mkdocs and index

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -30,6 +30,7 @@ nav:
     - crear/elements-cfdi-40.md
     - crear/complemento-nomina12b.md
     - crear/complemento-carta-porte-30.md
+    - crear/complemento-carta-porte-31.md
     - crear/complemento-comercio-exterior-20.md
     - crear/complementos-aun-no-implementados.md
     - crear/cfdi-de-retenciones-e-informacion-de-pagos.md
