--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,7 @@
         "optimize-autoloader": true
     },
     "require": {
-        "php": ">=7.3 <8.4",
+        "php": ">=7.3",
         "ext-libxml": "*",
         "ext-dom": "*",
         "ext-xsl": "*",
