--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -146,6 +146,10 @@ jobs:
           git clone --depth 1 https://github.com/phpcfdi/resources-sat-xml resources-sat-xml-cloned
           mv resources-sat-xml-cloned/resources build/resources
           rm -r -f resources-sat-xml-cloned
+      - name: Remove genkgo/xsl on PHP 8.4
+        if: matrix.php-version == '8.4'
+        run: |
+          composer remove genkgo/xsl --dev --no-interaction --no-progress --no-update
       - name: Install project dependencies
         run: |
           composer remove squizlabs/php_codesniffer friendsofphp/php-cs-fixer phpstan/phpstan --dev --no-interaction --no-progress --no-update
@@ -194,6 +198,10 @@ jobs:
           git clone --depth 1 https://github.com/phpcfdi/resources-sat-xml resources-sat-xml-cloned
           mv resources-sat-xml-cloned/resources build/resources
           rm -r -f resources-sat-xml-cloned
+      - name: Remove genkgo/xsl on PHP 8.4
+        if: matrix.php-version == '8.4'
+        run: |
+          composer remove genkgo/xsl --dev --no-interaction --no-progress --no-update
       - name: Install project dependencies
         run: |
           composer remove squizlabs/php_codesniffer friendsofphp/php-cs-fixer phpstan/phpstan --dev --no-interaction --no-progress --no-update
